change for java8 compatibility